# groups_evo_crewai-escolher-envio-para-grupo-ou-para-meu-numero

./: .cache_ggshield  .docker_environment  .dockerignore  .env.example  .gitignore  AVALIACAO_SISTEMA.md  BRANCH_MAIN_VS_ORGANIZED_COMPARISON.md  CODEBASE_REORGANIZATION_PLAN.md  COMPARISON_ANALYSIS.md  DIAGNOSTIC_REPORT.md  Dockerfile  Dockerfile.bak  Dockerfile.bak.bak  Dockerfile.lite  Dockerfile_simple  FIXES_COMPLETED.md  INFRASTRUCTURE.md  INFRASTRUCTURE_STATUS.md  LICENSE  MIGRATION_PHASE1_COMPLETE.md  ORGANIZED_STRUCTURE_FIXED.md  PORTAINER_GUIDE.md  RASPBERRY_DEPLOYMENT.md  README.md  WhatsApp_Group_Resumer.py  allfiles.txt  allfiles_sorted.txt  app.py  app2.py  check_api_status.py  compose.yaml  config.py  delete_scheduled_tasks.py  deploy_compose_to_raspberry.sh  deploy_to_raspberry.sh  diagram_detailed.py  diagram_overview.py  docker-compose-simple.yml  docker-compose.yml  docker-entrypoint.sh  (+45 more)
backup_migration/: agendar_todos.py  group.py  group_controller.py  groups_util.py  list_scheduled_tasks.py  load_env.sh  save_groups_to_csv.py  summary.py
config/: settings.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  supervisord.conf
docs/: CONTRIBUTING.md  DOCKER_VALIDATION.md  EVOLUTION_API_DOCUMENTATION.md  EVOLUTION_API_QUICK_REFERENCE.md  MANUAL_CLI.md  MANUAL_DEV.md  README.md
pages/: 1_Landing_page.py  2_Portuguese.py  3_English.py  4_Dashboard.py  5_Dashboard.py
reorganization_backup/: agendar_todos.py  list_scheduled_tasks.py  save_groups_to_csv.py
scripts/: agendar_todos.py  delete_scheduled_tasks.py  diagram_example.py  evolution_api_examples.py  flowchart_diagram.py  list_scheduled_tasks.py  save_group_summaries_to_csv.py
src/: README.md  __init__.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.sh  test_alternative_urls.py  test_api_connectivity.py  test_connect_whatsapp.py  test_group.py  test_group_controller.py  test_groups_util.py  test_message_sandeco.py
tools/: 50_plus.py  compare_macos_docker.sh  connect_whatsapp.py  debug_streamlit_scheduling.sh  delete_all_resumo_tasks.py  delete_scheduled_tasks.py  diagnose_docker_scheduling.py  diagnose_instance_problems.sh  docker_scheduler_diagnose.sh  final_diagnosis.sh  fix_broken_tasks.sh  fix_docker_scheduling.sh  fix_scheduling.sh  fix_timezone_issue.sh  monitor_cron_executions.sh  monitor_docker_logs.sh  quick_diagnosis.sh  solution_summary.sh  status_report.sh  test_docker_scheduler.py  test_docker_summary.sh  test_manual_execution.sh  test_scheduling_debug.sh  (+1 more)
(+96 files in other folders)
