[project]
name = "groups-evo-crewai"
version = "0.1.0"
description = "WhatsApp Group Manager and Summarizer"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "crewai>=0.100.0",
    "crewai-tools>=0.32.1",
    "evolutionapi>=0.0.9",
    "streamlit>=1.41.1",
    "watchdog>=3.0.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "plotly>=6.0.1",
]

